# fastapi-extended-route

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: publish.yml  test.yml
fastapi_extended_route/: __init__.py  _main.py  main.py
scripts/: check  clean  coverage  lint  publish
tests/: conftest.py  test_routing.py  test_url.py
