[metadata]
name = fastapi_extended_route
version = 0.1.0
author = Amin Alaee
author_email = mohammadamin.alaee@gmail.com
description = A small utility for FastAPI Router.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aminalaee/fastapi_extended_route
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
zip_safe = False
python_requires = >=3.7
install_requires =
    starlette

[options.packages.find]
exclude =
    tests*

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
show_error_codes = True

[tool:isort]
profile = black
combine_as_imports = True

[coverage:run]
source_pkgs = fastapi_extended_route, tests
